1시 40분 병합전 커밋

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -79,7 +79,7 @@
               <li><a class="dropdown-item text-white" th:href="@{/board(category = 4)}">입양 게시판</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a class="nav-link fw-bold" style="cursor:pointer">병원</a></li>
+          <li class="nav-item"><a class="nav-link fw-bold" style="cursor:pointer" th:href="@{/hospital}">병원</a></li>
 		<li class="nav-item"><a class="nav-link fw-bold" th:href="@{/productList}" style="cursor:pointer">상품</a></li> 
 	</div>
     </div>
