--- a/src/main/resources/templates/views/main/mainPage.html
+++ b/src/main/resources/templates/views/main/mainPage.html
@@ -43,7 +43,7 @@
 								             <li><a class="dropdown-item text-white" th:href="@{/board(category = 4)}">입양 게시판</a></li>
 										</ul>
 									</li>
-									<li class="nav-item"><a class="nav-link fw-bold">병원</a></li>
+									<li class="nav-item"><a class="nav-link fw-bold" th:href="@{/hospital}">병원</a></li>
 									<li class="nav-item"><a class="nav-link fw-bold" th:href="@{/productList}">상품</a></li>
 								</ul>
 							</div>
