--- a/src/main/resources/templates/views/hospital/hospital.html
+++ b/src/main/resources/templates/views/hospital/hospital.html
@@ -1,207 +1,192 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layouts/main_layout}">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/main_layout}">
 <head>
 <meta charset="UTF-8">
 <title>병원 메인페이지</title>
-<link rel="stylesheet" th:href="@{/css/board.css}" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+<link rel="stylesheet" th:href="@{/css/hospital.css}" />
 </head>
 <body>
  <th:block layout:fragment="content">
- <!-- 해시태그 부분인데 카테고리로 변경하기 -->
-        <th:block th:if="${category == 4}">
-        <div class ="row">
-        	<div class ="col">
-        		<form name="hashtagForm" id="hashtagForm" action="board" 
-					class="row justify-content-center">
-        		<input type="hidden" name="category" th:value="${category}" />
-					<div class="col-auto">
-						<input type="text" name="hashtag" id="hashtag" class="form-control" style="width:500px;"placeholder="찾으시는 반려동물의 종을 입력해주세요"/>
-					</div>
-					<div class="col-auto">
-						<input type="submit" value="검 색" class="btn btn-outline-success"/>
-					</div>
-				</form>
-        	</div>
+<section class="py-5 text-center container">
+   <div class="row py-lg-5 mt-2">          
+		     <div class="col-lg-6 col-md-4 mx-auto">
+			       <h1 class="fw-bold">Hospital</h1>
+			       <p class="lead text-body-secondary my-1">
+					 Find the best local veterinary care.<br>Explore hospital info, services, and tips for your pet's health.
+			       </p>
+		     </div>
+     </div>
+   </section>
+ <!-- 매니저용 검색폼 -->
+    <div class="row">
+        <div class="col">
+            <form name="addressForm" id="addressForm" action="hospital" class="row justify-content-center">
+                <div class="col-auto">
+                    <input type="text" name="address" id="address" class="form-control" style="width:500px;"
+                           placeholder="병원의 지역 명으로 입력해주세요. ex)서울, 경기"/>
+                </div>
+                <div class="col-auto">
+                    <input type="submit" value="검 색" class="btn btn-outline-success"/>
+                </div>
+            </form>
         </div>
-        </th:block>
-        <!-- 여기부터 리스트출력  -->
-        <div class="album py-5" style="background-color: transparent;">
-          <div class="container">
-          
-          <!-- 해시태그일때 버튼  -->
-           
-          <th:block th:if="${isHashtagBoard and bList != null and !#lists.isEmpty(bList)}">
-          	<div class ="row my-0">
-          	<div class="col w-100 text-center">
-			    ' [[${hashtag}]] '로 검색한 결과 리스트입니다.
-			  </div>
-          	</div>
-       		 <div class ="row my-3">
-       		 	<div class ="col-6 text-start">
-       		 		<a class="btn btn-outline-secondary light-gray-btn" th:href="@{/board(category=4)}">처음으로</a>
-       		 	</div>
-       		 	<div class ="col-6 d-flex justify-content-end">
-				<a class="btn btn-outline-secondary light-gray-btn"  th:href="@{/writeBoard(category=${category}, hashtag=${hashtag}, redirectUrl=${redirectUrl})}">
-    				글쓰기
-				</a>
-					</div>
-       		 </div>
-       		</th:block>
-        		<!-- 해시태그 아닐때 버튼  --> 
-       		<th:block th:if="${! isHashtagBoard and bList != null and !#lists.isEmpty(bList)}">
-       		 <div class ="row my-3">
-       		 	<div class ="col d-flex justify-content-end">
-       		 		<!--  <a class="btn btn-outline-secondary light-gray-btn" th:href="@{|writeBoard?category=${category}|}">글 쓰기</a>-->
-       		 		<!-- 글쓰기 버튼 주소 수정(로그인폼으로 갈때 내가 어디서 왔는지 알림 -->
-					<a class="btn btn-outline-secondary light-gray-btn"  th:href="@{/writeBoard(category=${category}, redirectUrl=${redirectUrl})}">
-    				글쓰기
-				</a>
-       		 	</div>
-       		 </div>
-       		</th:block>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            	<!-- 해시태그면서 게시글이 있는 경우 -->
-            	<th:block th:if="${isHashtagBoard and bList != null and !#lists.isEmpty(bList)}">
-        			<th:block th:each ="board:${bList}">
-             		 <div class="col" id ="eachBoard">
-                		<div class="card shadow-sm">
-                 		 <!-- 사진 객체라 board.thumbnail은 안되고 .imagePath로 실제 파일 경로 들고오기-->
-        					<a th:href="@{/board/boardDetail(category=${board.categoryId}, boardId=${board.boardId},hashtag=${hashtag}, pageNum=${currentPage})}"  style="text-decoration: none; color: inherit;">
-                 		 <!-- 이미지가 없을수도있음 -->
-                 		 <th:block th:if="${board.thumbnail != null and board.thumbnail.fileName != null}">
-							    <img class="bd-placeholder-img card-img-top"
-							         alt="게시글 사진"  height="225"  style="object-fit: cover; width: 100%;" 
-							         th:src="@{'/upload/board/' + ${board.thumbnail.fileName}}" />
-							</th:block>
-							<th:block th:if="${board.thumbnail == null or board.thumbnail.fileName == null}">
-							    <img class="bd-placeholder-img card-img-top"
-							         alt="게시글 사진"  height="225"  style="object-fit: cover; width: 100%;" 
-							         th:src="@{'/upload/board/noImage.jpg'}" />
-							</th:block>
-			                  <div class="card-body">
-				                    <p class="card-text" th:text ="${board.title}">게시글 제목
-				                    </p>
-				                    <div class="d-flex justify-content-between align-items-center"> 
-				                     	<small class="text-body-secondary" th:text="${#dates.format(board.createdAt, 'yyyy-MM-dd')}">작성날짜</small>
-				                      	<small class="text-body-secondary" th:text ="${board.writerId}">작성자 id</small>
-	                   			 </div>
-                  			</div>
-                  			</a>
-                		</div>
-              		</div>
-              	</th:block>
-              </th:block>
-              <!-- 해시태그아니면서 게시글이 있는 경우 -->
-               <th:block th:if="${!isHashtagBoard and bList != null and !#lists.isEmpty(bList)}">
-        			<th:block th:each ="board:${bList}">
-             		 <div class="col" id ="eachBoard">
-                		<div class="card shadow-sm">
-                 		 <!-- 사진 객체라 board.thumbnail은 안되고 .imagePath로 실제 파일 경로 들고오기-->
-                 		 <a th:href="@{/board/boardDetail(category=${board.categoryId}, boardId=${board.boardId}, pageNum=${currentPage})}"  style="text-decoration: none; color: inherit;">
-                 			 <th:block th:if="${board.thumbnail != null and board.thumbnail.fileName != null}">
-							    <img class="bd-placeholder-img card-img-top"
-							         alt="게시글 사진"  height="225"  style="object-fit: cover; width: 100%;" 
-							         th:src="@{'/upload/board/' + ${board.thumbnail.fileName}}" />
-							</th:block>
-							<th:block th:if="${board.thumbnail == null or board.thumbnail.fileName == null}">
-							    <img class="bd-placeholder-img card-img-top"
-							         alt="게시글 사진"  height="225"  style="object-fit: cover; width: 100%;" 
-							         th:src="@{'/upload/board/noImage.jpg'}" />
-							</th:block>
-					                  <div class="card-body">
-				                    <p class="card-text" th:text ="${board.title}">게시글 제목 </p>
-				                    <div class="d-flex justify-content-between align-items-center"> 
-				                    	 <small class="text-body-secondary" th:text="${#dates.format(board.createdAt, 'yyyy-MM-dd')}">작성날짜</small>
-				                     	 <small class="text-body-secondary" th:text ="${board.writerId}">작성자 id</small>
-	                   			 	</div>
-	                  			</div>
-                  			</a>
-                		</div>
-              		</div>
-              	</th:block>
-              </th:block>
-              <!-- 해시태그면서 게시글이 없는 경우 -->
-				<th:block th:if="${isHashtagBoard and (bList == null or #lists.isEmpty(bList))}">
-				  <div class="col w-100 text-center py-5">
-				      <img th:src="@{/upload/board/noReply.png}" alt="게시글 없음" 
-				           class="float-up-down" 
-				           style="max-width:200px; margin-bottom:20px;" />
-				      <div>' [[${hashtag}]] ' 검색한 결과 리스트가 존재하지 않습니다.</div>
-				  </div>
-				  <!-- 버튼 가운데 정렬 -->
-					<div class="d-flex justify-content-center mt-3">
-					  <a class="btn btn-outline-secondary light-gray-btn" th:href="@{/board(category=4)}">처음으로</a>
-					</div>
-				</th:block>
-				<!-- 해시태그아니면서 게시글이 없는 경우 -->
-				<th:block th:if="${! isHashtagBoard and (bList == null or #lists.isEmpty(bList))}">
-				  <div class="col w-100 text-center py-5">
-				      <img th:src="@{/upload/board/noReply.png}" alt="게시글 없음" 
-				           class="float-up-down" 
-				           style="max-width:200px; margin-bottom:20px;" />
-				      <div>게시글 리스트가 존재하지 않습니다.</div>
-				  </div>
-				</th:block>
+    </div>
+
+ <!-- 리스트 출력 -->
+ <div class="album py-5" style="background-color: transparent;">
+    <div class="container">
+
+        <!-- 주소 검색일 때 버튼 -->
+        <th:block th:if="${hospitalList.isAddress and hospitalList.hList != null and hospitalList.hList.size() > 0}">
+            <div class="row my-0">
+                <div class="col w-100 text-center">
+                    ' [[${hospitalList.address}]] '로 검색한 결과 리스트입니다.
+                </div>
             </div>
-            <!-- 페이지 네이션 -->
+            <div class="row my-3">
+                <div class="col-6 text-start">
+                    <a class="btn btn-outline-secondary light-gray-btn" th:href="@{/hospital}">처음으로</a>
+                </div>
+                <th:block th:if="${isManager}">
+                    <div class="col-6 d-flex justify-content-end">
+                        <a class="btn btn-outline-secondary light-gray-btn"
+                           th:href="@{/writeHospital(redirectUrl=${redirectUrl})}">
+                            병원 추가
+                        </a>
+                    </div>
+                </th:block>
+            </div>
+        </th:block>
+
+        <!-- 주소검색이 아닐 때 버튼 -->
+        <th:block th:if="${!hospitalList.isAddress and hospitalList.hList != null and hospitalList.hList.size() > 0}">
+            <th:block th:if="${isManager}">
+                <div class="row my-3">
+                    <div class="col d-flex justify-content-end">
+                        <a class="btn btn-outline-secondary light-gray-btn"
+                           th:href="@{/writeHospital(redirectUrl=${redirectUrl})}">
+                            병원 추가
+                        </a>
+                    </div>
+                </div>
+            </th:block>
+        </th:block>
+
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <!-- 게시글이 있는 경우 -->
+            <th:block th:if="${hospitalList.hList != null and hospitalList.hList.size() > 0}">
+                <th:block th:each="hospital : ${hospitalList.hList}">
+                    <div class="col hospitalCard">
+                        <div class="card shadow-sm">
+                            <a th:href="@{/hospital/hospitalDetail(hospital=${hospital.hospitalId}, address=${hospital.address},pageNum=${hospitalList.currentPage})}"
+                               style="text-decoration: none; color: inherit;">
+                                <th:block th:if="${hospital.mainImage != null}">
+                                    <img class="bd-placeholder-img card-img-top" alt="게시글 사진" height="225"
+                                         style="object-fit: cover; width: 100%;"
+                                         th:src="@{'/upload/hospital/' + ${hospital.mainImage}}" />
+                                </th:block>
+                                <th:block th:if="${hospital.mainImage == null}">
+                                    <img class="bd-placeholder-img card-img-top" alt="게시글 사진" height="225"
+                                         style="object-fit: cover; width: 100%;"
+                                         th:src="@{'/upload/board/noImage.jpg'}" />
+                                </th:block>
+                                <div class="card-body">
+								    <p class="card-text" th:text="${hospital.name}">게시글 제목</p>
+								    <div class="d-flex align-items-center"> <small class="text-body-secondary" th:text="${hospital.address}">병원 주소</small>
+								        
+								        <div class="ms-auto like-dislike-group">
+								            <span class="like-item">
+								                <i class="bi bi-hand-thumbs-up text-success"></i>
+								                <small class="text-body-secondary">([[${hospital.good}]])</small>
+								            </span>
+								            <span class="dislike-item">
+								                <i class="bi bi-hand-thumbs-down text-secondary"></i>
+								                <small class="text-body-secondary">([[${hospital.bad}]])</small>
+								            </span>
+								        </div>
+								    </div>
+								</div>
+                            </a>
+                        </div>
+                    </div>
+                </th:block>
+            </th:block>
+        </div>
+            <!-- 게시글 없을 때 -->
+				<th:block th:if="${hospitalList.hList == null or hospitalList.hList.size() == 0}">
+				    <div class="col w-100 text-center py-5">
+				        <img th:src="@{/upload/board/noReply.png}" alt="게시글 없음"
+				             class="float-up-down" style="max-width:200px; margin-bottom:20px;" />
+				      <div th:if="${hospitalList.isAddress}">' [[${hospitalList.address}]] ' 검색한 결과 리스트가 존재하지 않습니다.</div>
+				      <div th:unless="${hospitalList.isAddress}">게시글 리스트가 존재하지 않습니다.</div>
+				  </div>
+				
+				  <!-- 버튼 강제 가운데 정렬 -->
+				    <div class="no-result-wrapper">
+				        <a class="btn btn-outline-secondary light-gray-btn no-result-btn" th:href="@{/hospital}">처음으로</a>
+				    </div>  
+				</th:block>
+          <!-- 페이지 네이션 -->
             <div class ="row my-5">
 				<div class ="col">
-            <!-- 해시태그면서 게시글이 있는 경우 -->
+          <!-- 해시태그면서 게시글이 있는 경우 -->
 					<nav aria-label="Page navigation example"
-     					th:if="${isHashtagBoard and bList != null and !#lists.isEmpty(bList)}">
-					<ul class="pagination justify-content-center">
-					  <li class="page-item" th:if ="${startPage > pageGroup}">
-					    <a class="page-link"  th:href="@{|/board?category=${category}&pageNum=${startPage-1}&hashtag=${hashtag}|}">Prev</a>
-					  </li>
-					  <li th:each="num : ${ #numbers.sequence(startPage, endPage)}" 
-									th:classappend="${num == currentPage} ? 'active'" class="page-item">
-					  	<!-- 현재 페이지 아닐 때  -->
-						  	<th:block th:unless="${num == currentPage}">
-								<a class="page-link" th:text="${num}" 
-								th:href="@{|/board?category=${category}&pageNum=${num}&hashtag=${hashtag}|}">1</a>
-							</th:block>
-						  <!-- 현재 페이지 일 때 -->
-						  <th:block th:if="${num == currentPage}">
-								<span class="page-link" th:text="${num}" >1</span>
-							</th:block>
-					  </li>
-		
-					  <li class="page-item" th:if = "${endPage < pageCount}">
-					    <a class="page-link"   th:href="@{|/board?category=${category}&pageNum=${startPage+pageGroup}&hashtag=${hashtag}|}">Next</a>
-					  </li>
-					</ul>
+					     th:if="${hospitalList.isAddress and hospitalList.hList != null and hospitalList.hList.size() > 0}">
+					    <ul class="pagination justify-content-center">
+					      <li class="page-item" th:if ="${hospitalList.startPage > hospitalList.pageGroup}">
+					        <a class="page-link" th:href="@{|/hospital?address=${hospitalList.address}&pageNum=${hospitalList.startPage-1}|}">Prev</a>
+					      </li>
+					      <li th:each="num : ${ #numbers.sequence(hospitalList.startPage, hospitalList.endPage)}" 
+					                th:classappend="${num == hospitalList.currentPage} ? 'active'" class="page-item">
+					        <!-- 현재 페이지 아닐 때  -->
+					        <th:block th:unless="${num == hospitalList.currentPage}">
+					            <a class="page-link" th:text="${num}" 
+					               th:href="@{|/hospital?address=${hospitalList.address}&pageNum=${num}|}">1</a>
+					        </th:block>
+					        <!-- 현재 페이지 일 때 -->
+					        <th:block th:if="${num == hospitalList.currentPage}">
+					            <span class="page-link" th:text="${num}" >1</span>
+					        </th:block>
+					      </li>
+					
+					      <li class="page-item" th:if = "${hospitalList.endPage < hospitalList.pageCount}">
+					        <a class="page-link" th:href ="@{|/hospital?address=${hospitalList.address}&pageNum=${hospitalList.startPage+hospitalList.pageGroup}|}">Next</a>
+					      </li>
+					    </ul>
 					</nav>				
-            <!-- 해시태그아니고 게시글이 있는 경우 (기본) -->
-	           		<nav aria-label="Page navigation example"
-     					 th:if="${!isHashtagBoard and bList != null and !#lists.isEmpty(bList)}">
-						<ul class="pagination justify-content-center">
-						  <li class="page-item" th:if ="${startPage > pageGroup}">
-						    <a class="page-link" th:href = "@{|/board?category=${category}&pageNum=${startPage-1}|}">Prev</a>
-						  </li>
-						  <li th:each="num : ${ #numbers.sequence(startPage, endPage)}" 
-										th:classappend="${num == currentPage} ? 'active'" class="page-item">
-						  <!-- 현재 페이지 아닐 때  -->
-						  	<th:block th:unless="${num == currentPage}">
-								<a class="page-link" th:text="${num}" 
-								th:href="@{|/board?category=${category}&pageNum=${num}|}">1</a>
-							</th:block>
-						  <!-- 현재 페이지 일 때 -->
-						  <th:block th:if="${num == currentPage}">
-								<span class="page-link" th:text="${num}" >1</span>
-							</th:block>
-						  </li>
-						  <li class="page-item" th:if = "${endPage < pageCount}">
-						    <a class="page-link" th:href ="@{|/board?category=${category}&pageNum=${startPage+pageGroup}|}">Next</a>
-						  </li>
-						</ul>
+					
+					<!-- 해시태그아니고 게시글이 있는 경우 (기본) -->
+					<nav aria-label="Page navigation example"
+					     th:if="${!hospitalList.isAddress and hospitalList.hList != null and hospitalList.hList.size() > 0}">
+					    <ul class="pagination justify-content-center">
+					      <li class="page-item" th:if ="${hospitalList.startPage > hospitalList.endPage}">
+					        <a class="page-link" th:href="@{|/hospital?pageNum=${hospitalList.startPage-1}|}">Prev</a>
+					      </li>
+					      <li th:each="num : ${ #numbers.sequence(hospitalList.startPage, hospitalList.endPage)}" 
+					                th:classappend="${num == hospitalList.currentPage} ? 'active'" class="page-item">
+					        <!-- 현재 페이지 아닐 때  -->
+					        <th:block th:unless="${num == hospitalList.currentPage}">
+					            <a class="page-link" th:text="${num}" 
+					               th:href="@{|/hospital?pageNum=${num}|}">1</a>
+					        </th:block>
+					        <!-- 현재 페이지 일 때 -->
+					        <th:block th:if="${num == hospitalList.currentPage}">
+					            <span class="page-link" th:text="${num}" >1</span>
+					        </th:block>
+					      </li>
+					      <li class="page-item" th:if = "${hospitalList.endPage < hospitalList.pageCount}">
+					        <a class="page-link" th:href ="@{|/hospital?pageNum=${hospitalList.startPage+hospitalList.pageGroup}|}">Next</a>
+					      </li>
+					    </ul>
 					</nav>
 				</div>            
             </div>
             <!-- 여기까지  -->
-          </div>
-        </div>
-    </th:block>
+  		  </div>
+		</div>
+</th:block>
 </body>
 </html>
