--- a/src/main/resources/templates/views/main/mainPage.html
+++ b/src/main/resources/templates/views/main/mainPage.html
@@ -98,9 +98,8 @@
 					<div id="content">
 		    			<!-- 배경 비디오 -->
 					    <video autoplay muted loop playsinline class="bg-video">
-					        <source src="/upload/main/main.mp4" type="video/mp4">
-					        Your browser does not support the video tag.
-					    </video>
+						    <source th:src="@{/upload/main/main.mp4}" type="video/mp4">
+						</video>
 				    	<!-- 콘텐츠 오버레이 -->
 					    <div class="overlay-content">
 					    	<div class = "row">
