--- a/src/main/resources/templates/views/hospital/hospital.html
+++ b/src/main/resources/templates/views/hospital/hospital.html
@@ -194,11 +194,55 @@
 		  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 		    <div class="modal-content">
 		      <div class="modal-header">
-		        <h5 class="modal-title">병원 상세</h5>
+		      <!-- 병원 이름  -->
+		        <h5 class="modal-title text-center" id ="modalHospitalName">병원 상세</h5>
 		        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 		      </div>
 		      <div class="modal-body">
 		        <!-- 여기에 내용물 채워넣기 -->
+		        <!-- 지도 -->
+		        <div id="hospitalMap" style="height:300px;"></div>
+		        <!-- 내용물 -->
+		        <table>
+				  <tr>
+				    <th>원장</th>
+				    <td id="modalDoctorName"></td>
+				  </tr>
+				  <tr>
+				    <th>주소</th>
+				    <td id="modalAddress"></td>
+				  </tr>
+				  <tr>
+				    <th>전화번호</th>
+				    <td id="modalPhone"></td>
+				  </tr>
+				  <tr>
+				    <th>소개</th>
+				    <td id="modalContent"></td>
+				  </tr>
+				  <tr>
+				    <th>등록일</th>
+				    <td id="modalCreatedAt"></td>
+				  </tr>
+				</table>
+				<!-- 좋아요싫어요  -->
+		        <div class="like-row">
+					  <span class="like-item">
+			                <i class="bi bi-hand-thumbs-up text-success"></i>
+			                <small id="goodCount" class="text-body-secondary">()</small>
+			            </span>
+			            <span class="dislike-item">
+			                <i class="bi bi-hand-thumbs-down text-secondary"></i>
+			                <small id="badCount" class="text-body-secondary">()</small>
+			            </span>
+					</div>
+					<!-- 매니저 권한 있을 때만 보임 -->
+					<div id="managerButtons" class= "mt-5 mb-3">
+					 <th:block th:if="${isManager}">
+					  <button id="updateBtn">수정</button>
+					  <button id="deleteBtn">삭제</button>
+					  </th:block>
+					</div>
 		      </div>
 		    </div>
 		  </div>	
