--- a/src/main/resources/templates/views/product/ProductWrite.html
+++ b/src/main/resources/templates/views/product/ProductWrite.html
@@ -51,10 +51,21 @@
                     <input type="number" name="price" class="form-input" placeholder="₩ 가격을 입력해 주세요" required>
                 </div>
 
+				<!-- 슬라이드 이미지 추가 -->
                 <div class="input-group">
-                    <label>상품 이미지 업로드</label>
-                    <input type="file" name="file" class="form-input" accept="image/*" required>
-                </div>
+				    <label>메인 상품 이미지 (필수)</label>
+				    <input type="file" name="file1" class="form-input" accept="image/*" required>
+				</div>
+				
+				<div class="input-group">
+				    <label>상세 이미지 1 (선택)</label>
+				    <input type="file" name="file2" class="form-input" accept="image/*">
+				</div>
+				
+				<div class="input-group">
+				    <label>상세 이미지 2 (선택)</label>
+				    <input type="file" name="file3" class="form-input" accept="image/*">
+				</div>
 
                 <div class="input-group">
                     <label>상품 상세 설명</label>
