병원 삭제 기능 구현

--- a/src/main/resources/templates/views/hospital/hospital.html
+++ b/src/main/resources/templates/views/hospital/hospital.html
@@ -53,7 +53,7 @@
                 <div class="col-6 text-start">
                     <a class="btn btn-outline-secondary light-gray-btn" th:href="@{/hospital}">처음으로</a>
                 </div>
-                <th:block th:if="${isManager}">
+                <th:block th:if="${session.isManager}">
                     <div class="col-6 d-flex justify-content-end">
                         <a class="btn btn-outline-secondary light-gray-btn"
                            th:href="@{/writeHospital(redirectUrl=${redirectUrl})}">
@@ -66,7 +66,7 @@
 
         <!-- 주소검색이 아닐 때 버튼 -->
         <th:block th:if="${!hospitalList.isAddress and hospitalList.hList != null and hospitalList.hList.size() > 0}">
-            <th:block th:if="${isManager}">
+            <th:block th:if="${session.isManager}">
                 <div class="row mb-3">
                     <div class="col d-flex justify-content-end">
                         <a class="btn btn-outline-secondary light-gray-btn"
@@ -241,7 +241,7 @@
 					</div>
 					<!-- 매니저 권한 있을 때만 보임 -->
 					<div id="managerButtons" class= "mt-5 mb-3">
-					 <th:block th:if="${isManager}">
+					 <th:block th:if="${session.isManager}">
 					  <button id="updateBtn">수정</button>
 					  <button id="deleteBtn">삭제</button>
 					  </th:block>
